Novas alterações projeto

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=5,9,10,11;Edge" >
 
         <!-- CSS -->
+        
         <link rel="stylesheet" href="plugins/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="plugins/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
         <link rel="stylesheet" href="plugins/font-awesome/css/font-awesome.min.css" />
@@ -14,7 +15,7 @@
         <link rel="stylesheet" type="text/css" href="css/cronos-bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="css/app.css"/>
         <link rel="stylesheet" href="plugins/angular-ui-notification/dist/angular-ui-notification.min.css" />
-        <link id="themeSytleSheet" rel="stylesheet" href="css/themes/cerulean.min.css">
+       <link rel="stylesheet" href="css/themes/flatly.min.css" />
     </head>
     <body >
         <div ui-view class="fill"></div>
